# ai-triage

./: .env.local  .env.proxy  .gitignore  APACHE_REDIRECT_FIX.md  DEPLOYMENT.md  DEPLOYMENT_SUCCESS.md  DOMAIN_DEPLOYMENT_GUIDE.md  DOMAIN_SETUP_GUIDE.md  FINAL_DEPLOYMENT_SUCCESS.md  FINAL_DOMAIN_SETUP.md  FINAL_SOLUTION.md  FRONTEND_DOCKER_UPDATE.md  HTTPS_SETUP_GUIDE.md  NGINX_DEPLOYMENT.md  NGINX_DEPLOYMENT_GUIDE.md  README.md  REDIRECT_TROUBLESHOOTING.md  ROUTING_FIXES.md  SERVER_DEPLOYMENT_FIX.md  debug-deployment.sh  debug_server_issues.py  deploy-frontend.sh  deploy-local.sh  deploy-proxy.sh  deploy.sh  docker-compose.direct.yml  docker-compose.yml  nginx.conf  server-nginx-intelligent-triage.conf  server-nginx-optimized.conf  server-nginx.conf  server_debug.sh  setup-domain-proxy.sh  test-deployment.sh  test-nginx-deployment.sh  test_docker_routing.py  test_routing_fixes.py
Project-Documentation/: API-Documentation.md  Architecture.md  Data-and-Models.md  Deployment-and-Maintenance.md  (+3 more)
backend/: .env  .env.example  Dockerfile  README.md  TTS_ERROR_HANDLING.md  TTS_INTEGRATION.md  TTS_PROVIDERS.md  agent_graph.py  automated_test.py  config.py  interview_simulator.py  main.py  murf_client.py  prompts.py  pyproject.toml  requirements.txt  test_emergency_logic.py  test_final_integration.py  test_full_emergency_pipeline.py  test_integration.py  test_simple_tts.py  test_tts.py  test_tts_error_handling.py  test_tts_providers.py  triage_agent.py  tts_client.py  verify_migration.py  voice_utils.py
backend/TTS/: best_model.pth  config.json  file.py  speakers.pth
(+28 files in other folders)
